Fix gems earned label wrapping in HeroVictoryModal

--- a/app/styles/play/level/modal/hero-victory-modal.sass
+++ b/app/styles/play/level/modal/hero-victory-modal.sass
@@ -278,6 +278,7 @@
 
         .total-label
           width: 90px
+          white-space: normal
 
       .total-count
         float: left
